<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.educate.EducateFragment">

    <TextView
        android:id="@+id/educateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="Educate"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_chat"
                android:paddingHorizontal="32dp"
                android:paddingTop="24dp"
                android:text="Talk with different animals that are affected by the climate change."
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sound"
                android:paddingHorizontal="32dp"
                android:paddingTop="24dp"
                android:text="Listen latest News related to Climate Change and always stary updated!"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_group_1629"
                android:paddingHorizontal="32dp"
                android:paddingTop="24dp"
                android:text="Listen latest News related to Climate Change and always stary updated!"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                android:text="Start by clicking the button at bottom right corner."
                android:textSize="14sp" />




        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="Small steps you can take..."

        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:elevation="0dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="32dp"
                    android:paddingTop="8dp"
                    android:text="@string/try_to_minimise_waste_repair_and_reuse_give_unwanted_items_a_new_life_by_donating_them_to_charity_or_selling_them_on_avoid_wasting_food"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="32dp"
                    android:paddingTop="8dp"
                    android:text="@string/plant_trees_the_woodland_trust_are_aiming_to_plant_64_million_trees_over_the_next_10_years_and_need_your_help"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="32dp"
                    android:paddingTop="8dp"
                    android:text="@string/whether_you_want_to_plant_a_single_tree_in_your_garden_or_a_whole_wood_they_have_tools_and_resources_to_help"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="32dp"
                    android:paddingTop="8dp"
                    android:text="@string/avoiding_meat_and_dairy_products_is_one_of_the_biggest_ways_to_reduce_your_environmental_impact_on_the_planet_studies_suggest_that_a_high_fibre_plant_based_diet_is_also_better_for_your_health_so_it_can_be_a_win_win"
                    android:textSize="14sp" />

            </LinearLayout>


        </ScrollView>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>